--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 </div>
 </div>
 </div>
+<footer class="bg-white/60 backdrop-blur mt-12">
+<div class="max-w-6xl mx-auto px-4 py-6 text-center text-sm text-gray-600">
+<p><i class="fa fa-copyright" aria-hidden="true"> © Mohammed Alnuor 2025</i></p>
+</div>
+</footer>
+
+
+
 
     
 
